get quiz based on type
